# mjx-ooxml-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/mjx-chart/: Cargo.toml
crates/mjx-chart/src/: lib.rs
crates/mjx-derive/: Cargo.toml
crates/mjx-derive/src/: expand.rs  lib.rs  parse.rs
crates/mjx-derive/tests/: derive.rs
crates/mjx-dml/: Cargo.toml
crates/mjx-dml/src/: build.rs  color.rs  effect.rs  fill.rs  lib.rs  line.rs  resolve.rs  shape3d.rs  style.rs  theme.rs
crates/mjx-dml/src/geometry/: guide.rs  measures.rs  mod.rs  preset.rs  shape.rs  transform.rs
crates/mjx-dml/src/table/: cell.rs  grid.rs  mod.rs  properties.rs  row.rs  style.rs  table.rs
crates/mjx-dml/src/text/: body.rs  bullet.rs  character.rs  font.rs  list_style.rs  mod.rs  paragraph.rs  paragraph_properties.rs  run.rs
crates/mjx-dml/tests/: character_model.rs  color_model.rs  effect_model.rs  fill_model.rs  geometry_model.rs  line_model.rs  paragraph_model.rs  resolve_model.rs  shape3d_model.rs  shape_model.rs  style_model.rs  table_model.rs  table_style.rs  text_measures.rs  text_model.rs  theme_model.rs  transform_model.rs  txbody_roundtrip.rs
crates/mjx-docx/: Cargo.toml
crates/mjx-docx/src/: lib.rs
crates/mjx-mce/: Cargo.toml
crates/mjx-mce/src/: lib.rs  resolve.rs  scope.rs
crates/mjx-mce/tests/: resolve.rs
crates/mjx-omml/: Cargo.toml
crates/mjx-omml/src/: lib.rs
crates/mjx-ooxml/: Cargo.toml
crates/mjx-ooxml-core/: Cargo.toml
crates/mjx-ooxml-core/src/: convert.rs  intern.rs  lib.rs
crates/mjx-ooxml-core/src/raw/: element.rs  mod.rs
crates/mjx-ooxml-types/: COVERAGE.md  Cargo.toml
crates/mjx-ooxml-types/src/: drawingml.rs  lib.rs  presentationml.rs  support.rs
crates/mjx-ooxml-types/tests/: adjustments.rs  wire.rs
crates/mjx-ooxml/src/: lib.rs
crates/mjx-opc/: Cargo.toml
crates/mjx-opc/src/: content_types.rs  error.rs  lib.rs  media.rs  name.rs  package.rs  rels.rs
crates/mjx-opc/tests/: edit_surface.rs  roundtrip.rs  tree_roundtrip.rs
crates/mjx-pptx/: Cargo.toml
crates/mjx-pptx/src/: address.rs  build.rs  constants.rs  cursor.rs  error.rs  geometry.rs  group.rs  hyperlink.rs  lib.rs  nav.rs  placement.rs  presentation.rs  slide.rs  surface.rs  table.rs
crates/mjx-pptx/tests/: cursor.rs  effects.rs  fill.rs  geometry.rs  grouping.rs  groups.rs  hyperlinks.rs  images.rs  layouts.rs  notes.rs  office_open.rs  outline.rs  pictures.rs  placement.rs  removal.rs  roundtrip.rs  slide_creation.rs  surfaces.rs  table_effective.rs  table_formatting.rs  table_gaps.rs  table_merging.rs  table_selection.rs  table_structure.rs  table_styles.rs  tables.rs  text_formatting.rs  text_inheritance.rs  theme.rs  transform.rs  transform_inheritance.rs
crates/mjx-vml/: Cargo.toml
crates/mjx-vml/src/: lib.rs
crates/mjx-xlsx/: Cargo.toml
crates/mjx-xlsx/src/: lib.rs
crates/mjx-xml/: Cargo.toml
crates/mjx-xml/src/: lib.rs  text.rs
crates/mjx-xml/src/fidelity/: mod.rs  reader.rs  writer.rs
docs/: DRAWINGML_EFFECTIVE_FILL_HANDOFF.md  DRAWINGML_FILL_HANDOFF.md  DRAWINGML_OUTLINE_HANDOFF.md  DRAWINGML_PRESET_SHAPES.md  IMAGES_HANDOFF.md  LAYOUT_MASTER_HANDOFF.md  PHASE2_HANDOFF.md  TABLES_HANDOFF.md  TEXT_FORMATTING_HANDOFF.md  TRANSFORM_HANDOFF.md
tests/fixtures/: effects_theme.pptx  hyperlinks.pptx  layouts.pptx  notes.pptx  sample.docx  sample.pptx  sample.xlsx  tables.pptx
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/codegen/: emit.rs  geometry.rs  mod.rs  namespaces.rs  naming.rs  spec.rs  xsd.rs
