[package]
name = "mjx-chart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DrawingML charts (shared by all formats)."

[lints]
workspace = true

[dependencies]
mjx-ooxml-core.workspace = true
mjx-xml.workspace = true
mjx-derive.workspace = true
mjx-ooxml-types.workspace = true
mjx-dml.workspace = true
