[package]
name = "mjx-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Proc-macro deriving FromXml/ToXml (namespace- and fidelity-aware)."

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
