[package]
name = "mjx-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Proc-macro deriving FromXml/ToXml (namespace- and fidelity-aware)."

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
# The isolated derive tests derive on tiny local types and round-trip them through the
# fidelity reader. None of these depend on mjx-derive, so there is no dependency cycle.
mjx-ooxml-core.workspace = true
mjx-xml.workspace = true
mjx-ooxml-types.workspace = true
