[package]
name = "mjx-docx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WordprocessingML: document body, styles, numbering, sections, headers/footers."

[lints]
workspace = true

[dependencies]
mjx-ooxml-core.workspace = true
mjx-xml.workspace = true
mjx-derive.workspace = true
mjx-ooxml-types.workspace = true
mjx-opc.workspace = true
mjx-mce.workspace = true
mjx-dml.workspace = true
mjx-omml.workspace = true
