[package]
name = "mjx-ooxml-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GENERATED: OOXML simple types (enums/newtypes) + namespace/relationship/content-type constant tables (Strict + Transitional)."

[lints]
workspace = true

[dependencies]
mjx-ooxml-core.workspace = true
