[package]
name = "mjx-ooxml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Umbrella facade: format auto-detection, open()/save(), re-exports. Binding-ready public API."

[lints]
workspace = true

[dependencies]
mjx-ooxml-core.workspace = true
mjx-xml.workspace = true
mjx-ooxml-types.workspace = true
mjx-opc.workspace = true
mjx-mce.workspace = true
mjx-dml.workspace = true
mjx-pptx.workspace = true
mjx-docx.workspace = true
mjx-xlsx.workspace = true
