[package]
name = "mjx-xml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Fidelity-preserving pull reader/writer wrapping quick-xml; namespace scope, entities, xml:space."

[lints]
workspace = true

[dependencies]
mjx-ooxml-core.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
